# HR-Agents

./: README.md
jd_assistants/: .dockerignore  .env.example  .gitignore  AGENT_CONFIG_GUIDE.md  AGENT_CONFIG_SUMMARY.md  CHANGES_SUMMARY.md  CLICKHOUSE_FIX.md  Dockerfile  HUONG_DAN_STREAMING.md  README.md  README_V2.md  REFACTORING_WALKTHROUGH.md  STREAMING_CHANGES.md  UI_PREVIEW.md  WALKTHROUGH.md  docker-compose.yml  examples_other_agents.py  init_clickhouse.py  migrate_add_model_column.py  pyproject.toml  start.sh  test_streaming.py  test_system.sh  verify_agent_config.sh
jd_assistants/docs/: README.md  user-guide.md
jd_assistants/frontend/: README.md  package-lock.json  package.json  vite.config.js
jd_assistants/frontend/src/: App.jsx
jd_assistants/frontend/src/components/: Layout.jsx
jd_assistants/frontend/src/contexts/: LanguageContext.jsx
jd_assistants/frontend/src/pages/: CVMatching.jsx  Candidates.jsx  Dashboard.jsx  Departments.jsx  Employees.jsx  JDGenerator.jsx  JDRewriting.jsx  JobDescriptions.jsx  Login.css  Login.jsx  Positions.jsx  Settings.jsx
jd_assistants/frontend/src/services/: api.js
jd_assistants/src/jd_assistants/: api_main.py  app.py  auth.py  cache.py  clickhouse_db.py  database.py  leads.csv  main.py  message.py  results.csv  types.py
jd_assistants/src/jd_assistants/agent/: base.py  jd_analysis.py  jd_rewriter.py  read_cv.py  response.py  response_schemas.py  score.py  summarization.py
jd_assistants/src/jd_assistants/backend/api/v1/: api_keys.py  employees.py  org.py  recruitment.py  recruitment_v2.py  schemas.py
jd_assistants/src/jd_assistants/crews/lead_read_cv_crew/: crew.py  description.txt
jd_assistants/src/jd_assistants/crews/lead_read_cv_crew/config/: agents.yaml  tasks.yaml
jd_assistants/src/jd_assistants/crews/lead_response_crew/config/: agents.yaml  tasks.yaml
jd_assistants/src/jd_assistants/crews/lead_score_crew/: crew.py
jd_assistants/src/jd_assistants/crews/lead_score_crew/config/: agents.yaml  tasks.yaml
jd_assistants/src/jd_assistants/crews/lead_summarization_crew/: crew.py
jd_assistants/src/jd_assistants/crews/lead_summarization_crew/config/: agents.yaml  tasks.yaml
jd_assistants/src/jd_assistants/inference/: __init__.py  groq.py  llm_factory.py
jd_assistants/src/jd_assistants/jd/: jd_junior_react_dev.py
jd_assistants/src/jd_assistants/tools/: candidateUtils.py  read_pdf_tool.py
